force-app/main/default/objects/Contact/fields/First_Membership_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Membership_Start_Date__c</fullName>
    <inlineHelpText>The start date of the oldest Membership associated to this Contact</inlineHelpText>
    <label>First Membership Start Date</label>
    <type>Date</type>
</CustomField>