force-app/main/default/objects/Contact/fields/Last_Membership_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Membership_Start_Date__c</fullName>
    <inlineHelpText>The start date of the most recent Membership associated with this Contact</inlineHelpText>
    <label>Last Membership Start Date</label>
    <type>Date</type>
</CustomField>