force-app/main/default/objects/Contact/fields/Membership_Status__c.field-meta.xml
<CustomField>
    <fullName>Membership_Status__c</fullName>
    <inlineHelpText>The Contact's current memberships status</inlineHelpText>
    <label>Membership Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Membership_Status</valueSetName>
    </valueSet>
</CustomField>