force-app/main/default/objects/Contact/fields/Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Membership_Type__c</fullName>
    <inlineHelpText>This Contact's current Membership Type, based on the most recent active Membership</inlineHelpText>
    <label>Membership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Membership_Type</valueSetName>
    </valueSet>
</CustomField>